Remove BasicNode.of(int...) from the general path finder tests